GotoFileInPath now uses model

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -152,7 +152,7 @@
 
         <!-- Submit button -->
         <div class="mb-3">
-            <button type="submit" id="login-btn" class="btn btn-primary">Login</button>
+            <button type="submit" id="create-folder-btn" class="btn btn-primary">Create Folder</button>
         </div>
     </form>
 </div>
