Cleaned up models

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -143,7 +143,7 @@
         <!--FileName Field-->
         <div class="form-floating">
             <input asp-for="createFolderDetails.FolderName" class="form-control" placeholder=" ">
-            <label for="email">Email</label>
+            <label for="folderName">Folder Name</label>
             <span asp-validation-for="createFolderDetails.FolderName" class="text-danger"></span>
         </div>
 
