Fixed bug with navigation

--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -56,7 +56,7 @@
 
                     <!-- Email field -->
                     <div class="form-floating">
-                        <input type="email" asp-for="signupDetails.Email" class="form-control" placeholder=" ">
+                        <input type="text" asp-for="signupDetails.Email" class="form-control" placeholder=" ">
                         <label for="email">Email</label>
                         <span asp-validation-for="signupDetails.Email" class="text-danger"></span>
                     </div>
