--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -54,13 +54,13 @@
         <div id="filepath" class="row">
             <!-- Path Back button-->
             <div id="filepath-button" class="col">
-                <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-1">
+                <a asp-page-handler="GoToFolderInPath" asp-route-Id="-1">
                     <img src="~/images/file-path/path-back.svg" alt="path">
                 </a>
             </div>
             <!-- Root Image -->
             <div class="col" id="path-root">
-                <a asp-page-handler="GoToFolderInPath" asp-route-folderId="-2">
+                <a asp-page-handler="GoToFolderInPath" asp-route-Id="-2">
                     <img src="~/images/file-path/path-root.svg" alt="path">
                 </a>
             </div>
@@ -74,7 +74,7 @@
                         <div id="path-divider" class="col">></div>
 
                         <div class="file-hover">
-                            <a asp-page-handler="GoToFolderInPath" asp-route-folderId="@display.FolderID">
+                            <a asp-page-handler="GoToFolderInPath" asp-route-Id="@display.FolderID">
                                 <p id="path-folder" style="margin:0px;">@display.Foldername</p>
                             </a>
                         </div>
