Added login button to home screen

--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
     <title>Home</title>
     Layout = null;
-    <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
+    <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -24,7 +24,8 @@
         <h3 style="text-align:center;"><b>Welcome</b></h3>
         <p style="text-align:center;">Home page where there will be more information about the website and what it is</p>
         <p>Login below to use our cloud storage website to store and share files</p>
-        <button></button>
-
+        <button>
+            <a href="/Login">Login here!</a>
+        </button>
     </div>
 }
