--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -24,10 +24,7 @@
         <h3 style="text-align:center;"><b>Welcome</b></h3>
         <p style="text-align:center;">Home page where there will be more information about the website and what it is</p>
         <p>Login below to use our cloud storage website to store and share files</p>
-
-        <button href="/Register" class="btn btn-primary">Register here!</button>
-        <button href="/Login" class="btn btn-primary">Login here!</button>
-
-        <a href="/Register" class="btn btn-primary">Login2</a>
+        <a href="/Register" class="btn btn-primary">Register</a>
+        <a href="/Login" class="btn btn-primary">Login</a>
     </div>
 }
