Cleaned up the formatting

--- a/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-center text-white" id="footer" style="background-color: #0a4275;">
+    <footer class="text-center text-white bg-dark" id="footer">
         <div class="text-center p-3">
             © 2024 Copyright
         </div>
