Made home page neater and more professional

--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -21,8 +21,7 @@
     </nav>
 
     <div class="text-center p-3">
-        <h3 style="text-align:center;"><b>Welcome</b></h3>
-        <p style="text-align:center;">Home page where there will be more information about the website and what it is</p>
+        <h3><b>Welcome</b></h3>
         <p>Login below to use our cloud storage website to store and share files</p>
         <a href="/Register" class="btn btn-primary">Register</a>
         <a href="/Login" class="btn btn-primary">Login</a>
