--- a/Ethereal Cloud/wwwroot/css/Site.css
+++ b/Ethereal Cloud/wwwroot/css/Site.css
@@ -14,6 +14,10 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+h2 {
+    font-size: 22px;
+}
+
 .logo {
     width: auto;
     height: 3rem;
@@ -55,31 +59,6 @@ a {
     left: 0px;
     right: 0px;
     margin-bottom: 0px;
-}
-
-/* Profile Picture on nav bar right side */
-.profile-pic {
-    display: inline-block;
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    overflow: hidden;
-    border-radius: 50%;
-}
-
-    .profile-pic img {
-        width: 100%;
-        height: auto;
-        object-fit: fill;
-    }
-
-.profile-menu .dropdown-menu {
-    right: 0;
-    left: unset;
-}
-
-.profile-menu .fa-fw {
-    margin-right: 8px;
 }
 
 .popup-message {
