--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -147,6 +147,7 @@
     max-height: inherit;
     justify-content: center;
     overflow-y: scroll;
+    text-align: center;
 }
 
 /* Everything inside the containers for the files (img and file name) */
