--- a/Ethereal Cloud/Pages/Login.cshtml
+++ b/Ethereal Cloud/Pages/Login.cshtml
@@ -50,7 +50,9 @@
                 <div class="form-floating">
                     <input asp-for="loginDetails.UsernameOrEmail" class="form-control" placeholder=" ">
                     <label for="email">Email</label>
-                    <span asp-validation-for="loginDetails.UsernameOrEmail" class="text-danger"></span>
+                    <div class="error-output-spacing">
+                        <span asp-validation-for="loginDetails.UsernameOrEmail" class="text-danger"></span>
+                    </div>
                 </div>
 
                 <!-- Password field -->
@@ -58,7 +60,9 @@
                     <input type="password" id="Password" asp-for="loginDetails.Password" class="form-control" placeholder=" ">
                     <label for="password">Password</label>
                     <span class="password-toggle" onclick="togglePassword()">Show</span>
-                    <span asp-validation-for="loginDetails.Password" class="text-danger"></span>
+                    <div class="error-output-spacing">
+                        <span asp-validation-for="loginDetails.Password" class="text-danger"></span>
+                    </div>
                 </div>
 
                 <div class="mb-3">
