--- a/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         </nav>
     </header>
 
-    <div class="upload-page container mx-auto">
+    <div class="container mx-auto">
         @RenderBody()
     </div>
 
