Tried to make it more compatible for Firefox

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Files Box -->
-    <div id="filebox" class="col-lg-11 col-md-10 col-sm-10">
+    <div id="filebox" class="col-lg-11 col-md-10 col-sm-10 h-100">
         <!-- FilePath -->
         <div id="filepath" class="row">
             <!-- Path Back button-->
