--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -7,23 +7,37 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
+    <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
     <title>Home</title>
     Layout = null;
-    <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <!-- Logo on left side -->
-            <div class="navbar-brand">
-                <img src="~/images/LogoVector.svg" alt="logo" class="logo">
+    <div class="main">
+        <div class="home-container">
+            <div class="logo">
+                <img src="~/images/LogoVector.svg" alt="logo">
+            </div>
+
+            <div class="welcome-msg">
+                <h1><strong>Welcome to Ethereal Cloud</strong></h1>
+
+                <div class="small-gap">
+                    <p>Your secure and reliable cloud storage platform. Store, access, and share your files effortlessly.</p>
+                </div>
+
+                <div class="big-gap">
+                    <p>Login or register below to begin!</p>
+
+                    <div class="row mt-3">
+                        <div class="col-md-6">
+                            <a href="/Login" class="btn btn-primary">Login</a>
+                        </div>
+
+                        <div class="col-md-6">
+                            <a href="/Register" class="btn btn-primary">Register</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
-
-    <div class="text-center p-3">
-        <h3><b>Welcome</b></h3>
-        <p>Login below to use our cloud storage website to store and share files</p>
-        <a href="/Register" class="btn btn-primary">Register</a>
-        <a href="/Login" class="btn btn-primary">Login</a>
     </div>
 }
