--- a/Ethereal Cloud/wwwroot/css/Index.css
+++ b/Ethereal Cloud/wwwroot/css/Index.css
@@ -1,13 +1,15 @@
 ﻿body {
     background-color: #dfcffb;
     color: black;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .main {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 88vh;
 }
 
 .home-container {
