--- a/Ethereal Cloud/Pages/Login.cshtml
+++ b/Ethereal Cloud/Pages/Login.cshtml
@@ -11,19 +11,12 @@
     <title>Login</title>
     Layout = null;
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <!-- Logo on left side -->
-            <div class="navbar-brand">
-                <img src="~/images/LogoVector.svg" alt="logo" class="logo">
+    <div class="main">        
+        <div class="login-container">
+            <div class="logo">
+                <img src="~/images/LogoVector.svg" alt="logo">
             </div>
-        </div>
-    </nav>
-
-    <div class="main">
-        <div class="login-container align-items-center">
-            <h2>Login</h2>
-
+            <h2><strong>Login</strong></h2>
             <!-- Success/error messages -->
             <div class="popup-message">
                 <!-- Success/error messages -->
