--- a/Ethereal Cloud/Pages/Login.cshtml
+++ b/Ethereal Cloud/Pages/Login.cshtml
@@ -11,7 +11,7 @@
     <title>Login</title>
     Layout = null;
 
-    <div class="main">        
+    <div class="main">
         <div class="login-container">
             <div class="logo">
                 <img src="~/images/LogoVector.svg" alt="logo">
@@ -43,9 +43,9 @@
                 <div class="form-floating">
                     <input asp-for="loginDetails.UsernameOrEmail" class="form-control" placeholder=" ">
                     <label for="email">Email</label>
-                    <div class="error-output-spacing">
-                        <span asp-validation-for="loginDetails.UsernameOrEmail" class="text-danger"></span>
-                    </div>
+                </div>
+                <div class="error-text">
+                    <span asp-validation-for="loginDetails.UsernameOrEmail" class="text-danger"></span>
                 </div>
 
                 <!-- Password field -->
@@ -53,11 +53,12 @@
                     <input type="password" id="Password" asp-for="loginDetails.Password" class="form-control" placeholder=" ">
                     <label for="password">Password</label>
                     <span class="password-toggle" onclick="togglePassword()">Show</span>
-                    <div class="error-output-spacing">
-                        <span asp-validation-for="loginDetails.Password" class="text-danger"></span>
-                    </div>
+                </div>
+                <div class="error-text">
+                    <span asp-validation-for="loginDetails.Password" class="text-danger"></span>
                 </div>
 
+                <!-- Forgot password -->
                 <div class="mb-3">
                     <a href="/Register" id="forgot-pass" class="float-end text-end">Forgot Password?</a>
                 </div>
