--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -45,33 +45,28 @@
                     <div class="form-floating">
                         <input asp-for="signupDetails.Username" class="form-control" placeholder=" ">
                         <label for="username">Username</label>
-
-                        <div class="error-output-spacing">
-                            <span asp-validation-for="signupDetails.Username" class="text-danger"></span>
-                        </div>
                     </div>
-
+                    <div class="error-text">
+                        <span asp-validation-for="signupDetails.Username" class="text-danger"></span>
+                    </div>
 
                     <!-- Email field -->
                     <div class="form-floating">
                         <input type="text" asp-for="signupDetails.Email" class="form-control" placeholder=" ">
                         <label for="email">Email</label>
-
-                        <div class="error-output-spacing">
-                            <span asp-validation-for="signupDetails.Email" class="text-danger"></span>
-                        </div>
                     </div>
-
+                    <div class="error-text">
+                        <span asp-validation-for="signupDetails.Email" class="text-danger"></span>
+                    </div>
 
                     <!-- Password field -->
                     <div class="form-floating">
                         <input type="password" id="Password" asp-for="signupDetails.Password" class="form-control" placeholder=" ">
                         <label for="password">Password</label>
                         <span class="password-toggle" onclick="togglePassword()">Show</span>
-
-                        <div class="error-output-spacing">
-                            <span asp-validation-for="signupDetails.Password" class="text-danger"></span>
-                        </div>
+                    </div>
+                    <div class="error-text">
+                        <span asp-validation-for="signupDetails.Password" class="text-danger"></span>
                     </div>
 
                     <!-- Confirm password field -->
@@ -79,14 +74,13 @@
                         <input type="password" id="PasswordConf" asp-for="signupDetails.PasswordConf" class="form-control" placeholder=" ">
                         <label for="password">Confirm Password</label>
                         <span class="password-toggle" onclick="togglePassword2()">Show</span>
-
-                        <div class="error-output-spacing">
-                            <span asp-validation-for="signupDetails.PasswordConf" class="text-danger"></span>
-                        </div>
+                    </div>
+                    <div class="error-text">
+                        <span asp-validation-for="signupDetails.PasswordConf" class="text-danger"></span>
                     </div>
 
                     <!-- Terms and conditions form -->
-                    <div class="mb-3">
+                    <div class="mb-3 spacing">
                         <div class="form-check form-check-inline links">
                             <input class="form-check-input" type="checkbox" id="termsCheckbox" name="termsCheckbox" onchange="document.getElementById('login-btn').disabled = !this.checked;">
                             <label class="form-check-label">
