Testing efficiency methods

--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -138,9 +138,10 @@
             var termsUrl = "/PrivacyPolicy";
             window.open(termsUrl, "_blank", "width=800,height=600,top=350");
         }
+        var test = "a"
         function passStrengthCheck() {
             var password = document.getElementById('Password').value;
-            console.log(password);
+            console.log(test)
         }
     </script>
 }
