--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -142,7 +142,7 @@
         var low = /(?=.*[a-z])/;
         var med = /(?=.*[a-z])(?=.[A-Z])/
         var high = /(?=.*[a-z])(?=.[A-Z])(?=.*\d){10,}/
-        var highest = /(?=.*[a-z])(?=.[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]){10,}/
+        var highest = /(?=.*[a-z])(?=.[A-Z])(?=.*\d)(?=.*[!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]){10,}/
         function passStrengthCheck() {
             var password = document.getElementById('Password').value;
             if (low.test(password)) {
